objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Other_Message_s_Delivered__c</fullName>
        <label>Other Message(s) Delivered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Problems with Tissue</fullName>
                </value>
                <value>
                    <fullName>Guardant360 Clinical Data</fullName>
                </value>
                <value>
                    <fullName>Lung</fullName>
                </value>
                <value>
                    <fullName>Non-Lung</fullName>
                </value>
                <value>
                    <fullName>Ease-of-Use</fullName>
                </value>
                <value>
                    <fullName>Commitment - Onboarding SOP</fullName>
                </value>
                <value>
                    <fullName>In-Service - Onboarding SOP</fullName>
                </value>
                <value>
                    <fullName>Pull Through - Onboarding SOP</fullName>
                </value>
                <value>
                    <fullName>Patient Identification</fullName>
                </value>
                <value>
                    <fullName>Account Service - Reactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHI_Comments__c</fullName>
        <label>PHI Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in PB to indicate an activity is a replacement for a POD</description>
        <label>POD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_to_Connect_with_Pharma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permission to Connect with Pharma?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Test__c</fullName>
        <label>Previous Test Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tissue QNS</fullName>
                </value>
                <value>
                    <fullName>Undergenotyped</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Tissue Miss</fullName>
                    <label>Tissue Negative for mut</label>
                </value>
                <value>
                    <fullName>Blood Negative for mut</fullName>
                </value>
                <value>
                    <fullName>Blood confirmed tissue finding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Message_Delivered__c</fullName>
        <label>Primary Message Delivered</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Problems with Tissue</fullName>
                </value>
                <value>
                    <fullName>Guardant360 Clinical Data</fullName>
                </value>
                <value>
                    <fullName>Lung</fullName>
                </value>
                <value>
                    <fullName>Non-Lung</fullName>
                </value>
                <value>
                    <fullName>Ease-Of-Use</fullName>
                </value>
                <value>
                    <fullName>Commitment - Onboarding SOP</fullName>
                </value>
                <value>
                    <fullName>In-Service - Onboarding SOP</fullName>
                </value>
                <value>
                    <fullName>Pull Through - Onboarding SOP</fullName>
                </value>
                <value>
                    <fullName>Patient Identification</fullName>
                </value>
                <value>
                    <fullName>Account Service - Reactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Messaging__c</fullName>
        <defaultValue>&quot;Introduction to G360&quot;</defaultValue>
        <inlineHelpText>Mandatory</inlineHelpText>
        <label>Primary Messaging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction to G360</fullName>
                    <default>true</default>
                    <label>Introduction to G360</label>
                </value>
                <value>
                    <fullName>1st Line Undergenotyped</fullName>
                </value>
                <value>
                    <fullName>1st Line QNS</fullName>
                </value>
                <value>
                    <fullName>Progressing patient discussion</fullName>
                </value>
                <value>
                    <fullName>QNS at Progression</fullName>
                </value>
                <value>
                    <fullName>Competitive (vs Hotspot)</fullName>
                </value>
                <value>
                    <fullName>Competitive vs NGS or CGP</fullName>
                </value>
                <value>
                    <fullName>Tissue Paradigm (IO/Targeted/Chemo)</fullName>
                </value>
                <value>
                    <fullName>Billing concerns</fullName>
                </value>
                <value>
                    <fullName>Med Affairs</fullName>
                </value>
                <value>
                    <fullName>Patient Results Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Task Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Replied?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Letter_Delivery_Method__c</fullName>
        <label>Referral Letter Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                    <default>true</default>
                    <label>Fax</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, a referral letter will be generated</inlineHelpText>
        <label>Generate Referral Letter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Feedback_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Feedback Given?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule_in_vs_rule_out__c</fullName>
        <label>Rule in vs. rule out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>When to consider looking in tumor tissue</fullName>
                </value>
                <value>
                    <fullName>If NMD, does patient not have cancer?</fullName>
                </value>
                <value>
                    <fullName>Remission with + MAF = current cancer?</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Messaging__c</fullName>
        <label>Secondary Messaging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction to G360</fullName>
                </value>
                <value>
                    <fullName>1st Line Undergenotyped</fullName>
                </value>
                <value>
                    <fullName>1st Line QNS</fullName>
                </value>
                <value>
                    <fullName>Progressing patient discussion</fullName>
                </value>
                <value>
                    <fullName>QNS at Progression</fullName>
                </value>
                <value>
                    <fullName>Competitive (vs Hotspot)</fullName>
                </value>
                <value>
                    <fullName>Competitive vs NGS or CGP</fullName>
                </value>
                <value>
                    <fullName>Tissue Paradigm (IO/Targeted/Chemo)</fullName>
                </value>
                <value>
                    <fullName>Billing concerns</fullName>
                </value>
                <value>
                    <fullName>Med Affairs</fullName>
                </value>
                <value>
                    <fullName>Patient Results Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Sample__c</fullName>
        <label>Serial Sample?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spoke_to_MD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reached Provider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Reason__c</fullName>
        <label>Sub-Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Enrollment_Sub_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Treatment</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                    <label>On Trial</label>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Too Ill/Hospice</fullName>
                </value>
                <value>
                    <fullName>Prior Treatment</fullName>
                </value>
                <value>
                    <fullName>Failed Eligibility Criteria</fullName>
                </value>
                <value>
                    <fullName>Failed Pharma Screening</fullName>
                    <label>Failed Trial Screening</label>
                </value>
                <value>
                    <fullName>Travel</fullName>
                    <label>Travel Limitations</label>
                </value>
                <value>
                    <fullName>Research Objection</fullName>
                </value>
                <value>
                    <fullName>No Longer Enrolling</fullName>
                </value>
                <value>
                    <fullName>Match Criteria Changed</fullName>
                </value>
                <value>
                    <fullName>MD Engaged</fullName>
                </value>
                <value>
                    <fullName>MD Non-Engaged</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Future Consideration - On Treatment</fullName>
                </value>
                <value>
                    <fullName>Future Consideration - On Trial</fullName>
                </value>
                <value>
                    <fullName>Future Consideration - Other</fullName>
                </value>
                <value>
                    <fullName>Referred to Trial Site</fullName>
                </value>
                <value>
                    <fullName>Pending Prescription</fullName>
                </value>
                <value>
                    <fullName>Undergoing Screening</fullName>
                </value>
                <value>
                    <fullName>Aware of Trial</fullName>
                    <label>Aware</label>
                </value>
                <value>
                    <fullName>Insurance Coverage</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Hospice/Comfort Care</fullName>
                    <isActive>false</isActive>
                    <label>Hospice/Comfort Care</label>
                </value>
                <value>
                    <fullName>Per Pharma</fullName>
                    <isActive>false</isActive>
                    <label>Per Pharma</label>
                </value>
                <value>
                    <fullName>Second Opinion Only</fullName>
                    <isActive>false</isActive>
                    <label>Second Opinion Only</label>
                </value>
                <value>
                    <fullName>Transferred Care</fullName>
                    <isActive>false</isActive>
                    <label>Transferred Care</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Check__c</fullName>
        <formula>CASE(Subject, &quot;Update Opportunity - Missed Close Date&quot;, &quot;Valid&quot;, &quot;Physician 1:1&quot;, &quot;Valid&quot;, &quot;Patient Case Review&quot;,&quot;Email&quot;, &quot;Valid&quot;, &quot;Valid&quot;, &quot;E-mail&quot;, &quot;Valid&quot;, &quot;Office Visit&quot;, &quot;Valid&quot;, &quot;Staff Inservice&quot;, &quot;Valid&quot;, &quot;Phone Call&quot;, &quot;Valid&quot;, &quot;Office Meal&quot;, &quot;Valid&quot;, &quot;Tumor Board&quot;, &quot;Valid&quot;, &quot;Grand Rounds&quot;, &quot;Valid&quot;, 
&quot;Dinner Meeting&quot;, &quot;Valid&quot;, &quot;Speaker Program&quot;, &quot;Valid&quot;, &quot;Medical Affairs Presentation&quot;, &quot;Valid&quot;, &quot;Presentation&quot;, &quot;Valid&quot;, &quot;Qualification/Lab-Set up&quot;, &quot;Valid&quot;, &quot;Follow-up visit&quot;, &quot;Valid&quot;, &quot;Lab In-service&quot;, &quot;Valid&quot;, &quot;Problem case resolution&quot;, &quot;Valid&quot;, &quot;Group Presentation&quot;, &quot;Valid&quot;, &quot;Speaker&quot;, &quot;Valid&quot;, &quot;Billing Resolution&quot;, &quot;Valid&quot;, &quot;Portal Demonstration&quot;, &quot;Valid&quot;, &quot;Literature Drop&quot;, &quot;Valid&quot;, &quot;Staff 1:1&quot;, &quot;Valid&quot;, &quot;Lab 1:1&quot;, &quot;Valid&quot;, 
 
CASE(Task_Subject__c, &quot;Email&quot;, &quot;Valid&quot;, &quot;Update Opportunity - Missed Close Date&quot;, &quot;Valid&quot;, &quot;Physician 1:1&quot;, &quot;Valid&quot;, &quot;Patient Case Review&quot;, &quot;Valid&quot;, &quot;E-mail&quot;, &quot;Valid&quot;, &quot;Office Visit&quot;, &quot;Valid&quot;, &quot;Staff Inservice&quot;, &quot;Valid&quot;, &quot;Phone Call&quot;, &quot;Valid&quot;, &quot;Office Meal&quot;, &quot;Valid&quot;, &quot;Tumor Board&quot;, &quot;Valid&quot;, &quot;Grand Rounds&quot;, &quot;Valid&quot;, 
&quot;Dinner Meeting&quot;, &quot;Valid&quot;, &quot;Speaker Program&quot;, &quot;Valid&quot;, &quot;Medical Affairs Presentation&quot;, &quot;Valid&quot;, &quot;Presentation&quot;, &quot;Valid&quot;, &quot;Qualification/Lab-Set up&quot;, &quot;Valid&quot;, &quot;Follow-up visit&quot;, &quot;Valid&quot;, &quot;Lab In-service&quot;, &quot;Valid&quot;, &quot;Problem case resolution&quot;, &quot;Valid&quot;, &quot;Group Presentation&quot;, &quot;Valid&quot;, &quot;Speaker&quot;, &quot;Valid&quot;, &quot;Billing Resolution&quot;, &quot;Valid&quot;, &quot;Portal Demonstration&quot;, &quot;Valid&quot;, &quot;Literature Drop&quot;, &quot;Valid&quot;, &quot;Staff 1:1&quot;, &quot;Valid&quot;, &quot;Lab 1:1&quot;, &quot;Valid&quot;, &quot;Invalid&quot;))</formula>
        <label>Subject Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <description>Was formerly &apos;Task Subject&apos;</description>
        <label>Subject:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physician 1:1</fullName>
                </value>
                <value>
                    <fullName>Patient Case Review</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Staff Inservice</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Office Meal</fullName>
                </value>
                <value>
                    <fullName>Tumor Board</fullName>
                </value>
                <value>
                    <fullName>Grand Rounds</fullName>
                </value>
                <value>
                    <fullName>Dinner Meeting</fullName>
                </value>
                <value>
                    <fullName>Speaker Program</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs Presentation</fullName>
                </value>
                <value>
                    <fullName>Qualification/Lab-Set up</fullName>
                </value>
                <value>
                    <fullName>Problem case resolution</fullName>
                </value>
                <value>
                    <fullName>Billing Resolution</fullName>
                </value>
                <value>
                    <fullName>Portal Demonstration</fullName>
                </value>
                <value>
                    <fullName>Staff 1:1</fullName>
                </value>
                <value>
                    <fullName>Group Inservice</fullName>
                </value>
                <value>
                    <fullName>Email/Phone Call</fullName>
                </value>
                <value>
                    <fullName>Conference/Meeting</fullName>
                </value>
                <value>
                    <fullName>Lab 1:1</fullName>
                </value>
                <value>
                    <fullName>Med Affairs Courtesy Call</fullName>
                </value>
                <value>
                    <fullName>Literature Drop</fullName>
                </value>
                <value>
                    <fullName>MSI-H Follow Up</fullName>
                </value>
                <value>
                    <fullName>MA High Impact Interaction – Target</fullName>
                </value>
                <value>
                    <fullName>MA High Impact Interaction – Non-Target</fullName>
                </value>
                <value>
                    <fullName>Follow-up visit</fullName>
                    <isActive>false</isActive>
                    <label>Follow-up visit</label>
                </value>
                <value>
                    <fullName>Group Presentation</fullName>
                    <isActive>false</isActive>
                    <label>Group Presentation</label>
                </value>
                <value>
                    <fullName>Lab In-service</fullName>
                    <isActive>false</isActive>
                    <label>Lab In-service</label>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                    <isActive>false</isActive>
                    <label>Presentation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Timing__c</fullName>
        <label>Test Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st line</fullName>
                </value>
                <value>
                    <fullName>Progression</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 Mins</fullName>
                </value>
                <value>
                    <fullName>15 Mins</fullName>
                </value>
                <value>
                    <fullName>30 Mins</fullName>
                </value>
                <value>
                    <fullName>45 Mins</fullName>
                </value>
                <value>
                    <fullName>60 Mins</fullName>
                </value>
                <value>
                    <fullName>60 + Mins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topics_Discussed__c</fullName>
        <inlineHelpText>You can select multiple choices</inlineHelpText>
        <label>Topics Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orientated the client on the Report</fullName>
                </value>
                <value>
                    <fullName>What MAF means</fullName>
                </value>
                <value>
                    <fullName>What is a VUS</fullName>
                </value>
                <value>
                    <fullName>What the TRM means</fullName>
                </value>
                <value>
                    <fullName>Do we test for certain mutations?</fullName>
                </value>
                <value>
                    <fullName>Do we test for a certain gene?</fullName>
                </value>
                <value>
                    <fullName>Other (please explain in Comments field)</fullName>
                    <label>Other--please explain in Comments field</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Casesafe_ID__c</fullName>
        <description>Pass-through field from Match Record. Filled when &apos;Log Outreach Activity&apos; button is used on Match Record.</description>
        <label>Trial Casesafe ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connected Trial Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Match Records</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <description>Pass-through field from Match Record</description>
        <label>Trial</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tumor_result_vs_cfDNA_result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tumor result vs. cfDNA result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_communication__c</fullName>
        <label>Type of communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VUS_SYN_Actionable_mutations_TND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VUS/SYN/Actionable mutations/TND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_knowledge_gap_observed__c</fullName>
        <label>Was knowledge gap observed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_a_direct_call_transfer__c</fullName>
        <description>For tracking purposes/Project Hermes. Only visible to Med Affairs</description>
        <label>Was this a direct call transfer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Paragraph__c</fullName>
        <label>1st Paragraph</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1st_assigned__c</fullName>
        <description>Hidden field. Records who the task was first assigned to.</description>
        <label>1st assigned</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Created_By_Attachment_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the Activity as having been created from Power Tools Attachment Email</description>
        <label>Created By Attachment Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Keep_In_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this check box to keep Tasks sent to multiple recipients synchronized</inlineHelpText>
        <label>Keep In Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__LSA_GroupID__c</fullName>
        <description>Group Id used to connect Group tasks together.</description>
        <label>LSA_GroupID</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Talkdesk_Id__c</fullName>
        <label>Talkdesk Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>